    flickrnet dependency to use the new -dev package. Update patch to search
    for unversioned pcfile (Closes: #556802)
  * debian/control:
   + Bump mono-devel build-dep to >= 2.4.3 and remove all build-depends on
     packages now provided transitively by mono-devel.
   + Replace library build-depends with -dev counterparts which now contain
     the pcfiles.

 -- Iain Lane <laney@ubuntu.com>  Fri, 08 Jan 2010 21:23:35 +0000

f-spot (0.6.1.5-1) unstable; urgency=low

  * New upstream release 0.6.1.5
   - make IconView responsive to mouseclicks on gdk 2.18 (LP: #448162)
   - do not ignore .rw2 files
   - avoid an Array.OORE on empty dbs (Mike Gemuende)
  * debian/rules: Make get-orig-source policy compliant 

 -- Iain Lane <laney@ubuntu.com>  Mon, 09 Nov 2009 18:12:08 +0000

f-spot (0.6.1.4-1) unstable; urgency=low

  * New upstream release 0.6.1.4
   - keep sorting on startup
   - fix a NRE on LastRollDialog
   - fix the toolbar 2.28-ification
   - accept --sync as comandline parameter
   - avoid crashing on AdjustTimeDialog 
   - allow more than 60 pictures per Facebook albums
   - backported translations
  * debian/control: Require at least Cairo 1.4.0 per upstream 
  * debian/control: Require cli-common-dev >= 0.5.7 per Debian CLI
    policy
  * Refresh various patches to apply cleanly  

 -- Iain Lane <laney@ubuntu.com>  Thu, 29 Oct 2009 14:30:30 +0000

f-spot (0.6.1.3-2) unstable; urgency=low

  [ Iain Lane ]
  * debian/rules, debian/control: Use mono-csc instead of csc to build. Bump
    mono-devel build-dep version to 2.4.2.3 for this.
  * debian/rules: Remove LDFLAGS definition and set flags in dh_auto_configure
    override. Somehow it was being parsed twice - this was only used in one
    place so just setting it directly in the target doesn't hurt.

  [ Sebastien Bacher ]
  * debian/rules: update the translation template after the build, the change
    doesn't make a difference for debian but is required for ubuntu and will