@@ -8,8 +8,9 @@ f-spot (0.6.1.5-2) UNRELEASED; urgency=low
      packages now provided transitively by mono-devel.
    + Replace library build-depends with -dev counterparts which now contain
      the pcfiles.
+  * debian/ltmain-as-needed.sh: Steal updated version from Tomboy 
 
- -- Iain Lane <laney@ubuntu.com>  Fri, 08 Jan 2010 21:23:35 +0000
+ -- Iain Lane <laney@ubuntu.com>  Sat, 09 Jan 2010 13:10:03 +0000
 
 f-spot (0.6.1.5-1) unstable; urgency=low
 
